# fsml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
apps/api/: Dockerfile  main.py
apps/web/: package-lock.json
apps/web/src/app/: page.tsx
apps/worker/: enqueue.py  worker.py
