[project]
name = "fullstack-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "redis",
  "rq",                    # or "celery[redis]"
  "pandas",
  "numpy",
  "scikit-learn",
  "mlflow",
  "dvc",
  "pandera",
  "feast",
  "prefect",
  "python-dotenv",
  "rich",
]
[tool.uv] # uv-friendly
[tool.ruff]
line-length = 100
target-version = "py311"
[tool.black]
line-length = 100
target-version = ["py311"]
[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict = false
plugins = []
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

